chore: Sonar feedback